devops/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: agence
  labels:
    app.kubernetes.io/part-of: agence-location
