devops/k8s/base/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: agence
    component: backend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: agence
    component: frontend
  ports:
    - name: http
      port: 80
      targetPort: 8080
